Changed the fill color

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ polygonSeries.mapPolygons.template.setAll({
   stroke: am5.color(0xffffff),
   strokeWidth: 1,
   fillOpacity: 1.0,
+  fill: am5.color(0xCCCCCC),
 
   tooltipText: "{name}",
   templateField: "polygonSettings",
