--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scratch map</title>
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+  <link rel="manifest" href="/assets/favicon/site.webmanifest">
+  <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml" />
+  <meta name="msapplication-TileColor" content="#7AB5D8">
+  <meta name="theme-color" content="#7AB5D8">
+
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 
@@ -130,10 +139,13 @@ polygonSeries.mapPolygons.template.events.on("click", function(ev) {
 
 function updateMap() {
   const selectedCountriesArray = Array.from(selectedCountries)
-  polygonSeries.data.setAll(getDataFromCountries(selectedCountriesArray))
+  const allCountriesArray = selectedCountriesArray.concat(Array.from(futureCountries))
 
   const fragment = selectedCountriesArray.join(',')
   window.location.hash = fragment;
+
+  polygonSeries.data.setAll(getDataFromCountries(allCountriesArray))
+
 }
 
 function highlightAllCountries() {
