--- a/index.html
+++ b/index.html
@@ -12,10 +12,31 @@
   <meta name="msapplication-TileColor" content="#7AB5D8">
   <meta name="theme-color" content="#7AB5D8">
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="javascript:void(0);">
+    <img src="/assets/favicon/android-chrome-512x512.png" width="30" height="30" class="d-inline-block align-top" alt="">
+
+  </a>
+  <a class="navbar-brand" href="javascript:void(0);">jScratch</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+    </ul>
+    <ul class="form-inline my-2 my-lg-0">
+      <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Download</button>
+    </ul>
+  </div>
+</nav>
 
 <div id="chartdiv"></div>
 
