--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       <ul class="navbar-nav mr-auto">
       </ul>
       <ul class="form-inline my-2 my-lg-0">
-        <!-- <button class="btn btn-outline-primary my-2 my-sm-0" type="submit" onclick="doDownload()">Download</button> -->
+        <button class="btn btn-outline-warning my-2 my-sm-0 mx-1" type="submit" onclick="doUndo()">Undo</button>
+        <button class="btn btn-outline-danger my-2 my-sm-0 mx-1" type="submit" onclick="doClear()">Clear Map</button>
+        <button class="btn btn-outline-primary my-2 my-sm-0 mx-1" type="submit" onclick="doDownload()">Download</button>
       </ul>
     </div>
   </nav>
