Added Redo functionality

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             File
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="javascript:doDownload();">Export Map</a></li>
+            <li><a class="dropdown-item" href="javascript:doDownload();">Export to PNG</a></li>
           </ul>
         </li>
       </ul>
@@ -48,6 +48,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="javascript:doUndo();">Undo</a></li>
+            <li><a class="dropdown-item" href="javascript:doRedo();">Redo</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item dropdown-item-danger" href="javascript:doClear();">Clear Map</a></li>
           </ul>
