--- a/index.html
+++ b/index.html
@@ -60,12 +60,36 @@
       <ul class="navbar-nav mr-auto">
       </ul>
       <ul class="form-inline my-2 my-lg-0">
-        <button class="btn btn-outline-primary my-2 my-sm-0 mx-1" type="submit" onclick="doDownload()">Download</button>
+        <button class="btn btn-outline-success my-2 my-sm-0 mx-1" type="submit" data-bs-toggle="modal" data-bs-target="#exampleModal">Share</button>
       </ul>
     </div>
   </nav>
   <div id="chartdiv" class="flex-fill"></div>
 </main>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Share your map</h5>
+        <button type="button" class="close" data-dismiss="modal" data-bs-dismiss="modal">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="input-group mb-3">
+          <input id="inputURL" disabled="true" type="text" class="form-control" aria-describedby="basic-addon2">
+          <div class="input-group-append">
+            <button class="btn btn-outline-success" id="buttonCopyShare" onClick="doCopyShare()" type="button">Copy</button>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
