--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="msapplication-TileColor" content="#7AB5D8">
   <meta name="theme-color" content="#7AB5D8">
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="/assets/vendor/bootstrap@4.3.1/dist/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="/assets/style.css">
 </head>
@@ -125,14 +125,13 @@
 </div>
 
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-<script src="https://cdn.amcharts.com/lib/5/index.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/map.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/geodata/worldLow.js"></script>
-<script src="//cdn.amcharts.com/lib/5/geodata/data/countries2.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
-<script src="https://cdn.amcharts.com/lib/5/plugins/exporting.js"></script>
+<script src="/assets/vendor/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
+<script src="/assets/vendor/amcharts/index.js"></script>
+<script src="/assets/vendor/amcharts/map.js"></script>
+<script src="/assets/vendor/amcharts/geodata/worldLow.js"></script>
+<script src="/assets/vendor/amcharts/geodata/data/countries2.js"></script>
+<script src="/assets/vendor/amcharts/themes/Animated.js"></script>
+<script src="/assets/vendor/amcharts/plugins/exporting.js"></script>
 
 <script src="/assets/main.js"></script>
 
