Implemented country search with the code only

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
+        <form action="javascript:void(0);" onSubmit="doNavigate()" style="display: contents">
+          <input id="inputCountrySearch" class="form-control mr-sm-2" type="search" placeholder="Search for country" aria-label="Search">
+          <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Navigate</button>
+        </form>
       </ul>
       <ul class="form-inline my-2 my-lg-0">
         <button class="btn btn-outline-success my-2 my-sm-0 mx-1" type="submit" data-bs-toggle="modal" data-bs-target="#shareModal">Share</button>
