Removed the export to png

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             File
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="javascript:doDownload();">Export to PNG</a></li>
+            <!-- <li><a class="dropdown-item" href="javascript:doDownload();">Export to PNG</a></li> -->
             <li><a class="dropdown-item" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#shareModal">Share</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="javascript:void(0);" data-bs-toggle="modal" data-bs-target="#creditsModal">Credits</a></li>
